Version 3.4.4   unreleased

    * Add support for UnifiedEvent with DEFAULT_EVENT, since the type is often not used.
    * Add new UnifiedEventType KEY_EVENT to be associated with key-related handlers.

Version 3.4.3   01 Jan 2014

    * Fix XsrfRpcProxyCreator so it doesn't cause compiler errors if RPCs have overloaded methods.

Version 3.4.2   30 Dec 2013

    * Upgrade to CedarBuild v0.8.9, to allow configuring memory for tests.
    * Enhance ServiceException and create ServiceExceptionUtils, to allow for a translatable RootCause.

Version 3.4.1   06 Dec 2013

    * Bump up to AppEngine v1.8.8, since v1.8.4 is getting kind of old.
    * Tweak build.xml to run gradle in a way that's compatible with Java 7.
    * Revert ModuleTabPanelView.replaceFirstTabWithView(), which wasn't fully compatible with old version.

Version 3.4.0   06 Dec 2013

    * Make changes to ModuleTabPanelView, ModuleTabView and TabLayoutPanel so replacing tabs works better.
    * Add new external GWT class CheckboxCell that can be disabled.
    * Add new external GWT class SwitchableSelectionModel that can change from single to multiple selections.
    * Modify DataTable so that selection model can be easily switched by the caller.

Version 3.3.0   27 Nov 2013

    * Update class comments on StubbedClientTest case to reflect current usage.
    * Renamed AbstractClickHandler to AbstractViewEventClickHandler for consistency.
    * Renamed the the new Simple handlers to Abstract and move to the correct .gwt.handler package.
    * Add a new AbstractClickHandler that's not a ViewEventHandler.
    * Add tests for code in .client.gwt.handler so that tests in client projects can be simpler.
    * Add new format methods to ViewDataUtils, for consistent formatting in display labels.
    * Fix BackendDataSource so that it clears any selections when refreshing a table.
    * Tweak DataTablePager to show a more sensible count ("> 10 of 10") if the final page is empty.